--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Hello</title>
     </head>
         <body>
-            <h1>Hello to my webpage</h1>
+            <h1>Hello to my website</h1>
            Hello, World!
         </body>
 </html>
