--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Hello</title>
     </head>
         <body>
-            <h1 style="color:red;">Hello to my website</h1>
+            <h1 style="color:green;">Hello to my website</h1>
             <h2>hello</h2>
            Hello, World!
         </body>
