--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
     <title>Hello</title>
     </head>
         <body>
-<<<<<<< HEAD
-            <h1>Hello to my website!!!</h1>
-=======
-            <h1 style="color:green;">Hello to my website</h1>
->>>>>>> acdacca4794971f52d5009abbfde148079ef3d5f
+            <h1 style="color:green;">Hello to my website!!!</h1>
             <h2>hello</h2>
            Hello, World!
         </body>
